# py-tegra-swizzle

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build_release.yml  release.yml
py_tegra_swizzle/: __init__.py  rust.pyi
src/: lib.rs
