[package]
name = "py-tegra-swizzle"
version = "0.1.0"
edition = "2018"

[dependencies]
memmap = "0.7"
tegra_swizzle = { path = "tegra_swizzle" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_tegra_swizzle"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "abi3"]